add shift table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(build_adae_summary)
 export(build_adsl_chars_table)
 export(build_generic_bds_table)
 export(build_generic_occurrence_table)
+export(build_shift_table)
 export(filters_to_cond)
 export(run_app)
 import(rlang)
@@ -35,9 +36,11 @@ importFrom(dplyr,across)
 importFrom(dplyr,add_count)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_match)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
+importFrom(dplyr,count)
 importFrom(dplyr,cross_join)
 importFrom(dplyr,distinct)
 importFrom(dplyr,distinct_all)
@@ -48,7 +51,10 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_head)
 importFrom(dplyr,starts_with)
@@ -60,6 +66,7 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(purrr,compact)
 importFrom(purrr,discard)
 importFrom(purrr,every)
 importFrom(purrr,keep)
