--- a/.github/workflows/styler.yaml
+++ b/.github/workflows/styler.yaml
@@ -8,7 +8,7 @@ name: Style
 
 jobs:
   style:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
