update adae summary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(dplyr,starts_with)
 importFrom(dplyr,ungroup)
 importFrom(formatters,var_labels)
 importFrom(formatters,var_relabel)
+importFrom(formatters,with_label)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
@@ -115,8 +116,11 @@ importFrom(stringr,str_sub)
 importFrom(stringr,str_to_sentence)
 importFrom(stringr,str_to_title)
 importFrom(stringr,str_trunc)
+importFrom(stringr,str_wrap)
+importFrom(tern,analyze_num_patients)
 importFrom(tern,append_varlabels)
 importFrom(tern,count_occurrences)
+importFrom(tern,count_occurrences_by_grade)
 importFrom(tern,count_patients_with_event)
 importFrom(tern,count_patients_with_flags)
 importFrom(tern,count_values)
