test disp table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_adae_flags)
 export(build_adae_by_sev_tox)
 export(build_adae_summary)
 export(build_adsl_chars_table)
+export(build_disp_table)
 export(build_generic_bds_table)
 export(build_generic_occurrence_table)
 export(build_shift_table)
@@ -79,17 +80,21 @@ importFrom(purrr,set_names)
 importFrom(purrr,walk)
 importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
+importFrom(rtables,add_overall_level)
 importFrom(rtables,append_topleft)
 importFrom(rtables,as_html)
 importFrom(rtables,basic_table)
 importFrom(rtables,build_table)
 importFrom(rtables,cbind_rtables)
+importFrom(rtables,col_info)
 importFrom(rtables,drop_split_levels)
+importFrom(rtables,keep_split_levels)
 importFrom(rtables,obj_label)
 importFrom(rtables,remove_split_levels)
 importFrom(rtables,split_cols_by)
 importFrom(rtables,split_cols_by_multivar)
 importFrom(rtables,split_rows_by)
+importFrom(rtables,summarize_row_groups)
 importFrom(rtables,tt_to_flextable)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
