--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ importFrom(purrr,list_assign)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_lgl)
+importFrom(purrr,modify_at)
 importFrom(purrr,modify_if)
 importFrom(purrr,none)
 importFrom(purrr,reduce)
@@ -117,6 +118,7 @@ importFrom(shinyjs,useShinyjs)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
 importFrom(stringr,str_to_sentence)
 importFrom(stringr,str_to_title)
