--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -26,7 +26,14 @@ jobs:
           needs: lint
 
       - name: Lint
-        run: lintr::lint_package()
+        run: |
+          options(crayon.enabled = TRUE)
+          library(lintr)
+          lint_package(
+          linters = linters_with_defaults(
+          indentation_linter=NULL
+          )
+          )
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
