--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -26,7 +26,7 @@ jobs:
           needs: lint
 
       - name: Lint
-        run: lintr::lint_package(linters = lintr::linters_with_defaults(indentation_linter=NULL))
+        run: lintr::lint_package(linters = lintr::linters_with_defaults(indentation_linter=NULL, line_length_linter(100), object_name_linter=NULL))
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
