rename occ summary module

--- a/manifest.json
+++ b/manifest.json
@@ -1033,8 +1033,8 @@
       }
     },
     "cpp11": {
-      "Source": "RSPM",
-      "Repository": "https://packagemanager.posit.co/cran/latest",
+      "Source": "CRAN",
+      "Repository": "https://cloud.r-project.org",
       "description": {
         "Package": "cpp11",
         "Title": "A C++11 Interface for R's C Interface",
@@ -1149,7 +1149,7 @@
     },
     "curl": {
       "Source": "CRAN",
-      "Repository": "https://packagemanager.posit.co/cran/latest",
+      "Repository": "https://cloud.r-project.org",
       "description": {
         "Package": "curl",
         "Type": "Package",
@@ -1177,8 +1177,8 @@
       }
     },
     "data.table": {
-      "Source": "RSPM",
-      "Repository": "https://packagemanager.posit.co/cran/latest",
+      "Source": "CRAN",
+      "Repository": "https://cloud.r-project.org",
       "description": {
         "Package": "data.table",
         "Version": "1.15.4",
@@ -5379,13 +5379,13 @@
       "checksum": "228a3fd191faf774241adcdf1a6c0352"
     },
     ".github/workflows/R-CMD-check.yaml": {
-      "checksum": "1bd15fc6a92e962e41a91d6d4602cc33"
+      "checksum": "e0f3bf2f4fb98aa303376309e583e8fb"
     },
     ".github/workflows/styler.yaml": {
       "checksum": "489ca5b804cdb9a18f473d89d7a53a18"
     },
     ".github/workflows/test-coverage.yaml": {
-      "checksum": "0b3a35ee52da5aca1a3be1c0f71d0d21"
+      "checksum": "d688d1b71f97d71ffd74b5afdcd47856"
     },
     ".here": {
       "checksum": "d41d8cd98f00b204e9800998ecf8427e"
@@ -5397,13 +5397,13 @@
       "checksum": "fd50c9d99d79fcdce164cf02bf84b73f"
     },
     ".Rprofile": {
-      "checksum": "b0a545f347a05843a49aa03de3f88121"
+      "checksum": "85cf3000bf10a4cc36ca47e0e6ba1655"
     },
     "_pkgdown.yml": {
       "checksum": "a03741014429cf2d3a9b321a14749959"
     },
     "app.R": {
-      "checksum": "97dbfb31a7f9e3922a099a1c486abe46"
+      "checksum": "66069ac89022538983a4d32b5abe410e"
     },
     "codecov.yml": {
       "checksum": "e20df979617a9f8c55da8b1506da4078"
@@ -5454,7 +5454,7 @@
       "checksum": "7dc7aa5c0b670cbac3069f99b6759f89"
     },
     "docs/articles/user-guide.html": {
-      "checksum": "afc547960f9fb996dd0105226224d16e"
+      "checksum": "3bf961650c5ec30041f916ec56c87a27"
     },
     "docs/articles/user-guide_files/font-awesome-6.4.2/css/all.css": {
       "checksum": "5ca7783adc61f933805bd0467228c7de"
@@ -6108,7 +6108,7 @@
       "checksum": "d29354db016c59e62ae0c1436d41d1d6"
     },
     "docs/index.html": {
-      "checksum": "5258ac25b3232529bac9567b8237ec88"
+      "checksum": "64e748cb24b4f64c2b444a8bf4983721"
     },
     "docs/katex-auto.js": {
       "checksum": "b6babfc10247cf9190b9fa172dde62b8"
@@ -6132,7 +6132,7 @@
       "checksum": "0196cc47dc30c3c4d73560cd19848986"
     },
     "docs/pkgdown.yml": {
-      "checksum": "001e18ad4a1d62a84fce222bc75facb5"
+      "checksum": "88e7fcc93e1597a9058c70007741b41a"
     },
     "docs/reference/adae.html": {
       "checksum": "822b7d1692c025ac9d093617e2273754"
@@ -6150,40 +6150,40 @@
       "checksum": "1a90530854a596f72dc224188f41f456"
     },
     "docs/reference/build_adae_by_sev_tox.html": {
-      "checksum": "8bcd536886ddca756df5305f1b0697ec"
+      "checksum": "5bc98ae47771788df7496790fd171a13"
     },
     "docs/reference/build_adae_summary.html": {
-      "checksum": "4f897d71b7b36e161e32aded44c0c114"
+      "checksum": "cba6614f69835136100468fb06549aa4"
     },
     "docs/reference/build_adsl_chars_table.html": {
-      "checksum": "a827e456623e0c4e87bc3b9087535b48"
+      "checksum": "bd269bbacdee4ad2fe19573dd85320cb"
     },
     "docs/reference/build_disp_table.html": {
-      "checksum": "301031f08625812829d154999cc3d228"
+      "checksum": "009a8480ac9c82e766b3b6fbd64836b7"
     },
     "docs/reference/build_generic_bds_table.html": {
-      "checksum": "3e6e920d0025d20cab1d2acce25354d7"
+      "checksum": "b80619cd9a475198602dc454e789e815"
     },
     "docs/reference/build_generic_occurrence_table.html": {
-      "checksum": "292fa370496e07155afdc058efc3cd2e"
+      "checksum": "a888dab53a8163b3650b1900aee12fc8"
     },
     "docs/reference/build_shift_table.html": {
-      "checksum": "0081576a57ce7d643aa8548f7ee49e7b"
+      "checksum": "b0950af4a6dc8f2bda7b439ef1823847"
     },
     "docs/reference/drop_missing_cols.html": {
       "checksum": "13f7b937c1b29edc71d09212a951cd2e"
     },
     "docs/reference/figures/adae_filt.png": {
-      "checksum": "84aa293abc433957c23b3c1641fa32f6"
+      "checksum": "1204a242e319085c86d0aa05d87f21a2"
     },
     "docs/reference/figures/adae_filt_app.png": {
-      "checksum": "5696c19e33d3cb651b7d77103cc7784b"
+      "checksum": "7aeba2f1fdd17d78d61a4e922f524183"
     },
     "docs/reference/figures/adsl_filt.png": {
-      "checksum": "332be5595d168524db055dbeab59c8c3"
+      "checksum": "677e0424acb2716b302d491c8610fa2e"
     },
     "docs/reference/figures/adsl_filt_app.png": {
-      "checksum": "56e6a0401824ede4aba201d7506ad27a"
+      "checksum": "5b433585e187bb5ba248fe3e5b0042de"
     },
     "docs/reference/figures/home.png": {
       "checksum": "631fa4c48d0fc23cbdd009a8e3a77bfa"
@@ -6222,7 +6222,7 @@
       "checksum": "413f86dca1baba5e9027c9bacdea0090"
     },
     "docs/reference/figures/prev_data.png": {
-      "checksum": "e5620799a0b6d2a6dd5021abbefc937a"
+      "checksum": "a8842d9a5de973251727b0b387c52cae"
     },
     "docs/reference/figures/readin.png": {
       "checksum": "a5b84f873d3b1aa47cc517f7e8d69d34"
@@ -6252,22 +6252,25 @@
       "checksum": "8be8cb87df91871f09a8c5c49c5e7fe7"
     },
     "docs/search.json": {
-      "checksum": "7ceefb591c09ba1fbc63296b87d8fc63"
+      "checksum": "63085b19f3d16e19fb1b26c81c0c490a"
     },
     "docs/sitemap.xml": {
       "checksum": "6c3e88d00a4bc95f1d32d2510425b0eb"
     },
+    "inst/about.html": {
+      "checksum": "3a9e39772c969befccf76c4abf8bbbbb"
+    },
     "inst/about.md": {
-      "checksum": "c87124e35324ac0c640c799a3a22dd7a"
+      "checksum": "1dda69328e05a5635561920a801c5682"
     },
     "inst/app/www/custom.css": {
-      "checksum": "d9510a4e810b50d75d997646381495f2"
+      "checksum": "d44ac79a4f6cbe067e8c82fec06906de"
     },
     "inst/app/www/favicon.ico": {
       "checksum": "336fd37ac7ec0bbacefe40473f53f452"
     },
     "inst/app/www/logo.png": {
-      "checksum": "de0972adc66a58c4dab4029077e9cf55"
+      "checksum": "45b655d13c3117d59d2c2cbb8cbe0b32"
     },
     "inst/extdata/adae.RDS": {
       "checksum": "de4630b11a5a6097188c89548ff55063"
@@ -6291,46 +6294,34 @@
       "checksum": "f4cd917ffdf4feb56c9f5f86209443e2"
     },
     "inst/figures/adae_filt.png": {
-      "checksum": "84aa293abc433957c23b3c1641fa32f6"
+      "checksum": "1204a242e319085c86d0aa05d87f21a2"
     },
     "inst/figures/adae_filt_app.png": {
-      "checksum": "5696c19e33d3cb651b7d77103cc7784b"
+      "checksum": "7aeba2f1fdd17d78d61a4e922f524183"
     },
     "inst/figures/adsl_filt.png": {
-      "checksum": "332be5595d168524db055dbeab59c8c3"
+      "checksum": "677e0424acb2716b302d491c8610fa2e"
     },
     "inst/figures/adsl_filt_app.png": {
-      "checksum": "56e6a0401824ede4aba201d7506ad27a"
+      "checksum": "5b433585e187bb5ba248fe3e5b0042de"
     },
     "inst/figures/home.png": {
       "checksum": "631fa4c48d0fc23cbdd009a8e3a77bfa"
     },
     "inst/figures/logo.png": {
-      "checksum": "de0972adc66a58c4dab4029077e9cf55"
-    },
-    "inst/figures/navbar.png": {
-      "checksum": "e906e5600e6caee7de45e95cc29e47a1"
-    },
-    "inst/figures/prev_btn.png": {
-      "checksum": "413f86dca1baba5e9027c9bacdea0090"
+      "checksum": "45b655d13c3117d59d2c2cbb8cbe0b32"
     },
     "inst/figures/prev_data.png": {
-      "checksum": "e5620799a0b6d2a6dd5021abbefc937a"
-    },
-    "inst/figures/readin.png": {
-      "checksum": "a5b84f873d3b1aa47cc517f7e8d69d34"
-    },
-    "inst/figures/run_btn.png": {
-      "checksum": "8f1b543c172d5806f0edf0c36676b546"
+      "checksum": "a8842d9a5de973251727b0b387c52cae"
     },
     "inst/golem-config.yml": {
       "checksum": "87c25fad29d92ef18a55ca81282ceabb"
     },
     "inst/user-guide.html": {
-      "checksum": "6f700930f7af82d066da301505365afe"
+      "checksum": "7efcfe8ca39e429949c6bc981115008a"
     },
     "inst/user-guide.md": {
-      "checksum": "0093563f5484b1c40c50465142f5f59d"
+      "checksum": "b8b5ea53424f43d8ea149b36f7c49b8f"
     },
     "inst/WORDLIST": {
       "checksum": "29b9085157bd615a8a1a80f31cf20ad4"
@@ -6363,7 +6354,7 @@
       "checksum": "a013a1451a0a18b59141984a9ede1d8f"
     },
     "man/build_adsl_chars_table.Rd": {
-      "checksum": "485e0d1d09d5c64d8675b4e582588da2"
+      "checksum": "9caa142533d2f0ae81026b504dcd58fc"
     },
     "man/build_disp_table.Rd": {
       "checksum": "58d18802bbf38db29fd154370f45ca09"
@@ -6372,28 +6363,25 @@
       "checksum": "84f307bb62eb961310b474305c13d11a"
     },
     "man/build_generic_occurrence_table.Rd": {
-      "checksum": "5fd9d2db0bb42b8667b33a754372a85d"
+      "checksum": "b0ba66f90496ebbcdd57e9d7636e2306"
     },
     "man/build_shift_table.Rd": {
-      "checksum": "69ac7b5edb74743e8bfc70ad2a58d92d"
+      "checksum": "e6a4bcea22112a0f076c43dcc172ded2"
     },
     "man/drop_missing_cols.Rd": {
       "checksum": "d49f73169b2c164d10a2c567c5d6b7a9"
     },
     "man/figures/adae_filt.png": {
-      "checksum": "84aa293abc433957c23b3c1641fa32f6"
+      "checksum": "1204a242e319085c86d0aa05d87f21a2"
     },
     "man/figures/adae_filt_app.png": {
-      "checksum": "5696c19e33d3cb651b7d77103cc7784b"
+      "checksum": "7aeba2f1fdd17d78d61a4e922f524183"
     },
     "man/figures/adsl_filt.png": {
-      "checksum": "332be5595d168524db055dbeab59c8c3"
+      "checksum": "677e0424acb2716b302d491c8610fa2e"
     },
     "man/figures/adsl_filt_app.png": {
-      "checksum": "56e6a0401824ede4aba201d7506ad27a"
-    },
-    "man/figures/home.png": {
-      "checksum": "631fa4c48d0fc23cbdd009a8e3a77bfa"
+      "checksum": "5b433585e187bb5ba248fe3e5b0042de"
     },
     "man/figures/lifecycle-archived.svg": {
       "checksum": "cb1e46f469cfbbbde29c8b5113e1d789"
@@ -6420,22 +6408,10 @@
       "checksum": "1c1fe7a759b86dc6dbcbe7797ab8246c"
     },
     "man/figures/logo.png": {
-      "checksum": "de0972adc66a58c4dab4029077e9cf55"
-    },
-    "man/figures/navbar.png": {
-      "checksum": "e906e5600e6caee7de45e95cc29e47a1"
-    },
-    "man/figures/prev_btn.png": {
-      "checksum": "413f86dca1baba5e9027c9bacdea0090"
+      "checksum": "45b655d13c3117d59d2c2cbb8cbe0b32"
     },
     "man/figures/prev_data.png": {
-      "checksum": "e5620799a0b6d2a6dd5021abbefc937a"
-    },
-    "man/figures/readin.png": {
-      "checksum": "a5b84f873d3b1aa47cc517f7e8d69d34"
-    },
-    "man/figures/run_btn.png": {
-      "checksum": "8f1b543c172d5806f0edf0c36676b546"
+      "checksum": "a8842d9a5de973251727b0b387c52cae"
     },
     "man/pharmtables-package.Rd": {
       "checksum": "ed88aa66cb67a59d0772009173b7bf16"
@@ -6489,25 +6465,25 @@
       "checksum": "ff0cb7c6bc8c2426e991cf07db34454b"
     },
     "R/app_server.R": {
-      "checksum": "acb8ec84ad62fa7452be10195c43632b"
+      "checksum": "1b8ac10a8c4c0916f25868fc33024a49"
     },
     "R/app_ui.R": {
       "checksum": "e254375bef323dfa0fe1e6fbf3aa87e3"
     },
     "R/build_shift_table.R": {
-      "checksum": "ba3c2c5daeb03ca8f6512aede3c7eadf"
+      "checksum": "e8754b0a8f41edf0127fca8a0b931aae"
     },
     "R/data.R": {
       "checksum": "6d144cf0e214dd11e063ab03ab2524a3"
     },
     "R/gen_summary_utils.R": {
-      "checksum": "1d901292de164d3663cdd6bfe2c3ccd0"
+      "checksum": "244c8b7b77e1a7ea5a757b4a4842cec5"
     },
     "R/global.R": {
-      "checksum": "8065390bb5d01904775dbf597452d7ae"
+      "checksum": "ea4ea02478fb9e3c1854052237f42ff7"
     },
     "R/mod_adae_global.R": {
-      "checksum": "db706bada79a8ac8b26a945aa78f03d6"
+      "checksum": "9be8d1a77211cc8ed044456966fe4066"
     },
     "R/mod_adae_sev_tox.R": {
       "checksum": "8b519489470c1a21d91848dc75bc4d24"
@@ -6519,13 +6495,13 @@
       "checksum": "b906b68b0f349cf54afcd1d768a2e60e"
     },
     "R/mod_adsl_display.R": {
-      "checksum": "2ee937e82b4cfc397eeba26c745923ad"
+      "checksum": "cc4ade090ae95940db3a6667df0cb090"
     },
     "R/mod_adsl_filters.R": {
       "checksum": "2b007a0e841bdc8e38ec885ecae22ef9"
     },
     "R/mod_adxx_bodsys.R": {
-      "checksum": "652a3c8bcd5dc5b32c7af54d85b4be52"
+      "checksum": "928e0cf8c48cabe4e64db9a983728d9f"
     },
     "R/mod_adxx_param.R": {
       "checksum": "90c53fed6969b55006b2a66499c00211"
@@ -6534,13 +6510,13 @@
       "checksum": "d783025cb2fade1e2736ca92138ed46d"
     },
     "R/mod_bds_shift.R": {
-      "checksum": "0638be0b529ba7223f3811e6382975b3"
+      "checksum": "1b25170bfa39c6dea5c2676e2ae033b8"
     },
     "R/mod_data_preview.R": {
       "checksum": "bae6c39b05994f149abe41f5b578b192"
     },
     "R/mod_data_read.R": {
-      "checksum": "f46da79641dae144b26314112a04b71c"
+      "checksum": "17f34c7419b841c8cd7d50814ad1c28f"
     },
     "R/mod_disposition.R": {
       "checksum": "883d7374af156f1252c645abcafaef4a"
@@ -6552,10 +6528,10 @@
       "checksum": "57a34e9eac5527b7ef7c024ef0d6928e"
     },
     "R/mod_process_adsl.R": {
-      "checksum": "4c4dee8cc053f1ec1de98d3cecc07717"
+      "checksum": "d34f5f45141be85fdd84131a4ae9a7a5"
     },
     "R/mod_setup_filters.R": {
-      "checksum": "d412e262d21112e7bc00b199a55d2a0b"
+      "checksum": "80e68fc808c271e68ccce5fec595d55a"
     },
     "R/pharmtables-package.R": {
       "checksum": "f304cb8e442fdef7fa4128a808d843d3"
@@ -6564,16 +6540,16 @@
       "checksum": "d14688ea6e528356201e511c8c9a9305"
     },
     "R/ui_utils.R": {
-      "checksum": "579a5fe84af881db8e931d63263c42a0"
+      "checksum": "8e98fbb14d14e248b4e31677b1627d7b"
     },
     "R/utils_helpers.R": {
-      "checksum": "92d2338ef3c7e49eee439d4181404dfe"
+      "checksum": "86d4ae50596cfa1b49a9792956604df2"
     },
     "README.md": {
-      "checksum": "b46fef75a064a12c6837d1604f6c4a88"
+      "checksum": "cdcd202ffb1d217888173ba9e309221f"
     },
     "README.Rmd": {
-      "checksum": "f3fa85315aeceb11e16334f357cfdb21"
+      "checksum": "898398817748641db5c2f95d9a42043a"
     },
     "renv.lock": {
       "checksum": "1d2cb587501702a53dc5a15686ae54c0"
@@ -6624,7 +6600,7 @@
       "checksum": "f92890bafc7c05ace5374f0a0978ea3f"
     },
     "tests/testthat/test-mod_adxx_bodsys.R": {
-      "checksum": "4fecb1a2352d01ebf7f0bb5ee306720b"
+      "checksum": "a77667f51ebc40d2a377076e6b0a2eee"
     },
     "tests/testthat/test-mod_adxx_param.R": {
       "checksum": "4ed332af333c6386a1ea5cf82713b4d4"
@@ -6660,7 +6636,7 @@
       "checksum": "8e739e016b6d5bedb8c3b36fe44749ac"
     },
     "vignettes/user-guide.Rmd": {
-      "checksum": "466920bfabc7245ce2c910fb536d970a"
+      "checksum": "9c28c5e1398f328dc6f4cb1afea9bbb2"
     }
   },
   "users": null
